tests/pos/i15166/Test_2.scala
//> using options -Werror
object Test {
  val x: InterfaceAudience_JAVA_ONLY_1.Public = ???
}
